   * New air/liquid drag simulation calculation (both linear and rotational)
   * Added per-axis rotational drag coefficients (used by cars, like linear)

 * Camera improvements:
   * More reliable movement (more responsive, bumper camera perfectly still)
   * New damping/drag simulation
   * Hopefully all potential NaN position/rotation results can now be avoided
   * Camera settings are now car-specific, not defined in player profile
   * Modified camera (position) can now be reset without restarting the game

 * Car improvements:
   * Major reconfiguration of "Venom" car
   * Much better steer&throttle control for keyboard/digital input
   * New, more powerful, downforce
   * Dynamic suspension elevation/compensation of downforce and gravity
   * New tyre friction simulation model (more stable, easier to configure)
   * New tyre combined slip/grip model
   * New tyre/rim contact point evaluation
   * New load/normal force calculations for tyre contact points
   * Each wheel now stores its own set of parameters (independent of car, can
     support unattached wheels, different front/rear wheel handling and so on)
   * Wheel axles can now break (more a proof-of-concept than actual gameplay)
   * Smarter transition between brakes and throttle, more reliable at low speed
   * New rolling resistance code (more reliable at low speed/uneven terrain)
   * Less bending of wheel axles at high speeds (finite rotation for axles)

 * Major code reorganizations:
   * Renamed directory "shared" to "common"
   * Renamed directory "loaders" to "assets"
   * Renamed "Racetime_Data" to "Assets"
   * Moved most code from "common" to "assets" and "simulation"
   * Created "Thread" struct for thread local data (will become important)
   * Renamed "Object_Template" and "Car_Template" to "Module" and "Car_Module"
   * Renamed "Trimesh" and "..._Geom/_3D" to "Model" and "..._Mesh/_Draw"
   * Removed "../" from header inclusions (src is now in the inclusion paths)
