@@ -31,15 +31,15 @@ car Venom
 #ok, wheel? (global, world or track specific)
 wheel Slipstream #belongs to choosen world
 
-#todo: automatic spawning position instead of
+#todo: automatic starting position instead of
 #manual x and y coords relative to track start
-spawn -8 0
+start -8 0
 
 #another player joins the cage
 team Nemesis
 car Venom
 diameter 2
 wheel Reckon #can be used in any world
-spawn 8 0
+start 8 0
 
 #ok, end of file: cage is closed, race will start!
