@@ -55,5 +55,5 @@ start 0 -50 1.5
 cam_start 50 -100 5 #position
 focus_start 0 0 0 #focus point
 
-#at what z position things will be respawned or destroyed
-respawn -80
+#at what z position cars will be recreated and objects deleted
+restart -80
